Fix icons in dark mode

--- a/components/styles/icon-link.module.scss
+++ b/components/styles/icon-link.module.scss
@@ -20,13 +20,3 @@
     margin-left: 0.5rem;
   }
 }
-
-html:global(.dark-mode) {
-  .icon {
-    color: mix(variables.$white, variables.$black, 40%);
-
-    &:hover, &:active {
-      color: variables.$primary-accent;
-    }
-  }
-}
